# research_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  compose.yml  config.py  documentation.md  main.py  pyproject.toml  requirements.txt  tools.py
.github/workflows/: ci.yml  docker-publish.yml
briefing/: __init__.py  cli.py  config.py
briefing/api/: app.py  schemas.py
briefing/core/: __init__.py  agent.py
briefing/domain/: __init__.py  models.py
briefing/memory/: store.py
briefing/providers/: __init__.py  fetch.py  llm.py  search.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AssistantReportCard.jsx  Composer.jsx  Sidebar.jsx  Thread.jsx
tests/: test_agent.py  test_api.py  test_fetch.py  test_llm.py  test_memory.py
